--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ncc-janken",
   "version": "1.0.0",
   "description": "ins 2019/12/04 # ncc-janken Node.jsの ライブラリ Express と sockit.io を利用した じゃんけんゲーム です",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
+  },
+  "engines": {
+    "node": "12.13.1",
+    "npm":  "6.12.1"
   }
 }
